--- a/app/assets/sass/_custom.scss
+++ b/app/assets/sass/_custom.scss
@@ -2,7 +2,7 @@
   scroll-behavior: unset;
 }
 // Font Family
-$font-body:'Poppins', sans-serif;
+$font-body:var(--font-poppins);
  
 // Fluid Fonts
 $min_width:375px; 
