update web stories

--- a/app/assets/sass/pages/_page.scss
+++ b/app/assets/sass/pages/_page.scss
@@ -37,3 +37,7 @@
     z-index:1;
   }
 }
+
+.amp-mode-touch{
+  header, .offcanvas, .footer-attorney-sec, .testimonials-sec, footer, .footer-bottom, .free-consultation{display:none}
+}
