change web story page

--- a/app/assets/sass/pages/_page.scss
+++ b/app/assets/sass/pages/_page.scss
@@ -38,6 +38,6 @@
   }
 }
 
-.amp-mode-touch{
+.amp-mode-touch, .amp-mode-mouse{
   header, .offcanvas, .footer-attorney-sec, .testimonials-sec, footer, .footer-bottom, .free-consultation{display:none}
 }
