--- a/app/assets/sass/sections/_footer.scss
+++ b/app/assets/sass/sections/_footer.scss
@@ -279,7 +279,7 @@ footer{
         }
       }
     }
-    iframe{
+    iframe, .mapiframe{
       height:140px;
       margin-bottom:15px;
       @include media-breakpoint-down(lg){
